...
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="-5dp">

            <!-- Spielfeld-Container für Buttons -->
            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="4dp"
                app:alignmentMode="alignMargins"
                app:columnCount="7"
                app:rowCount="7" />
        </LinearLayout>

        <!-- Spieleranzeige -->
        <TextView
            android:id="@+id/text_current_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Aktueller Spieler:"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal" />
...
