<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/text_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MÜHLE2GO"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="48dp" />

    <Button
        android:id="@+id/button_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Host" />

    <Button
        android:id="@+id/button_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Client"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_debug_simulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Simulate Bluetooth"
        android:visibility="invisible" /> <!-- kannst du zu "visible" machen zum Testen -->
</LinearLayout>

